# numpy2ad

./: .gitignore  LICENSE.txt  README.md  TODO.md  TODO.txt  ad_test.ipynb  ad_transformer.py  adjoint_rules.py  ast_traversal.py  ast_traversal_test.ipynb  demo.ipynb  derivatives.py  dev_requirements.txt  draw_ast.py  environment.yml  expr_transformer.py  pyproject.toml  requirements.txt  sac_test.ipynb  sac_transformer.py  setup.cfg  simple_expressions.py
benchmarks/: benchmark_gls.py  benchmark_inv.py  benchmark_mma.py  plot_benchmarks.ipynb  timeit_gls_full.txt  timeit_gls_fwd_rev.txt  timeit_mma_512.txt  timeit_mma_full.txt  timeit_mma_fwd_rev.txt
demo/: ad_test.ipynb  demo.ipynb  example_problems.ipynb  test_expressions.py  tutorial.ipynb
numpy2ad/: __init__.py  ad_transformer.py  ast_traversal.py  base_transformer.py  derivatives.py  draw_ast.py  expr_transformer.py  func_transformer.py  validation.py
tests/: benchmark_gls.py  benchmark_mma.py  test_codegen.py  test_gls_cholesky.py  test_invariant.py  test_numpy2ad.py
