[metadata]
name = numpy2ad
version = 0.0.1
author = Nicholas Book
author_email = nicholasbook@googlemail.com
description = A python package for algorithmic differentiation of numpy expression by source transformation.
long_description = file: README.md
license = MIT 
long_description_content_type = text/markdown
classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License

[options]
python_requires = >= 3.11
zip_safe = False
packages = numpy2ad
install_requires =
    numpy

[options.extras_require]
graph = graphviz
tests = pytest
