[metadata]
name = numpy2ad
version = 0.1.0
author = Nicholas Book
author_email = nicholasbook@googlemail.com
description = A Python package for automatic differentiation of Numpy expressions by source transformation.
long_description = file: README.md
license = MIT 
long_description_content_type = text/markdown
classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License

[options]
python_requires = >= 3.10
zip_safe = False
packages = numpy2ad
install_requires =
    numpy

[options.extras_require]
graph = graphviz
tests = pytest
demo = ipykernel
